fixed the text wrapping in the map legend

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,8 +17,8 @@ html {
   color: #555;
 }
 .legend i {
-  width: 18px;
-  height: 18px;
+  width: 8px;
+  height: 8px;
   float: left;
   margin: 8px;
   opacity: 0.7;
